// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertsFlyout /> spec Alerts Flyout renders component with monitor 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--small"
        role="dialog"
        tabindex="0"
      >
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <div
          class="euiFlyoutHeader euiFlyoutHeader--hasBorder flyout"
        >
          <div
            class="euiText euiText--medium preview-title euiText--constrainedWidth"
          >
            <h2>
               Alerts 
            </h2>
          </div>
        </div>
        <div
          class="euiFlyoutBody"
          style="overflow-y: auto;"
        >
          <div
            class="euiFlyoutBody__overflow"
          >
            <div
              class="euiFlyoutBody__overflowContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiText euiText--medium"
                  >
                    <p
                      class="alerts_flyout_p"
                    >
                      Anomaly detector alerts are powered by the
                      <a
                        class="euiLink euiLink--primary"
                        href="https://opendistro.github.io/for-elasticsearch-docs/docs/alerting"
                        rel="noreferrer"
                      >
                         
                        Alerting plugin
                      </a>
                      . If you don't see 
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon-isLoading"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      Alerting in your navigation panel,
                      <a
                        class="euiLink euiLink--primary"
                        href="https://opendistro.github.io/for-elasticsearch-docs/docs/install/plugins/#alerting"
                        rel="noreferrer"
                      >
                         
                        install it first
                      </a>
                       
                      and follow the instructions below to set up alerts.
                    </p>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiSteps"
                  >
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 1"
                          class="euiStepNumber euiStep__circle"
                        >
                          1
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          Create a monitor
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          A monitor queries a detector on a specific schedule. In Alerting, choose "Define using anomaly detector".
                        </p>
                      </div>
                    </div>
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 2"
                          class="euiStepNumber euiStep__circle"
                        >
                          2
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          Define triggers and actions
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          Triggers specify the thresholds for anomalies to generate alerts. Actions specify the alert message and destination.
                        </p>
                      </div>
                    </div>
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 3"
                          class="euiStepNumber euiStep__circle"
                        >
                          3
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          View alerts from detector and monitor
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          View anomaly detector alerts on the anomaly history graph. See details of all alerts over time from the monitor.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlyoutFooter"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <a
                class="euiButton euiButton--primary"
                data-test-subj="setUpAlerts"
                href="https://opendistro.github.io/for-elasticsearch-docs/docs/alerting"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Explore Alerting 
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon-isLoading"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </span>
                </span>
              </a>
            </div>
            <div
              class="euiFlexItem"
            >
              <a
                class="euiButton euiButton--primary euiButton--fill"
                detectorid="GILVg3EBhaIh92zvX8uE"
                detectorinterval="1"
                detectorname="test detector"
                href="/f899c56c-6299-5d0d-8"
                monitor="[object Object]"
                rel="noreferrer"
                unit="Minutes"
              >
                <span
                  class="euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Edit alert settings
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<AlertsFlyout /> spec Alerts Flyout renders component with undefined monitor 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--small"
        role="dialog"
        tabindex="0"
      >
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <div
          class="euiFlyoutHeader euiFlyoutHeader--hasBorder flyout"
        >
          <div
            class="euiText euiText--medium preview-title euiText--constrainedWidth"
          >
            <h2>
               Alerts 
            </h2>
          </div>
        </div>
        <div
          class="euiFlyoutBody"
          style="overflow-y: auto;"
        >
          <div
            class="euiFlyoutBody__overflow"
          >
            <div
              class="euiFlyoutBody__overflowContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiText euiText--medium"
                  >
                    <p
                      class="alerts_flyout_p"
                    >
                      Anomaly detector alerts are powered by the
                      <a
                        class="euiLink euiLink--primary"
                        href="https://opendistro.github.io/for-elasticsearch-docs/docs/alerting"
                        rel="noreferrer"
                      >
                         
                        Alerting plugin
                      </a>
                      . If you don't see 
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon-isLoading"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      Alerting in your navigation panel,
                      <a
                        class="euiLink euiLink--primary"
                        href="https://opendistro.github.io/for-elasticsearch-docs/docs/install/plugins/#alerting"
                        rel="noreferrer"
                      >
                         
                        install it first
                      </a>
                       
                      and follow the instructions below to set up alerts.
                    </p>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiSteps"
                  >
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 1"
                          class="euiStepNumber euiStep__circle"
                        >
                          1
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          Create a monitor
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          A monitor queries a detector on a specific schedule. In Alerting, choose "Define using anomaly detector".
                        </p>
                      </div>
                    </div>
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 2"
                          class="euiStepNumber euiStep__circle"
                        >
                          2
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          Define triggers and actions
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          Triggers specify the thresholds for anomalies to generate alerts. Actions specify the alert message and destination.
                        </p>
                      </div>
                    </div>
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 3"
                          class="euiStepNumber euiStep__circle"
                        >
                          3
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          View alerts from detector and monitor
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          View anomaly detector alerts on the anomaly history graph. See details of all alerts over time from the monitor.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlyoutFooter"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <a
                class="euiButton euiButton--primary"
                data-test-subj="setUpAlerts"
                href="https://opendistro.github.io/for-elasticsearch-docs/docs/alerting"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Explore Alerting 
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon-isLoading"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </span>
                </span>
              </a>
            </div>
            <div
              class="euiFlexItem"
            >
              <button
                class="euiButton euiButton--primary euiButton--fill"
                detectorid="GILVg3EBhaIh92zvX8uE"
                detectorinterval="1"
                detectorname="test detector"
                type="button"
                unit="Minutes"
              >
                <span
                  class="euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Set up alerts
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;
